2006-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* AUTHORS:
	* MAINTAINERS:
	* Makefile.am:
	  Add maintainers file, update/utf8-ise/reformat authors file.

2006-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/tcp.c: (gnet_tcp_socket_connect_async_cancel):
	  We used gnet_inetaddr_new_list_async(), so we also need to call
	  gnet_inetaddr_new_list_async_cancel() to cancel it, and not
	  gnet_inetaddr_new_async_cancel(). Would cause invalid memory access,
	  double frees and other weird things when cancelling an asynchronous
	  TCP connect before the dns lookup has finished. Fixes #305854.

	* src/gnet-private.h:
	* src/inetaddr.h:
	* src/tcp.h:
	  The compiler can help us with stuff like this. Let's let it.

2006-09-12  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.h:
	* src/mcast.c: (gnet_mcast_socket_new_full),
	(gnet_mcast_socket_delete), (gnet_mcast_socket_ref),
	(gnet_mcast_socket_unref), (gnet_mcast_socket_get_io_channel),
	(gnet_mcast_socket_get_local_inetaddr),
	(gnet_mcast_socket_join_group), (gnet_mcast_socket_leave_group),
	(gnet_mcast_socket_get_ttl), (gnet_mcast_socket_set_ttl),
	(gnet_mcast_socket_is_loopback), (gnet_mcast_socket_set_loopback):
	* src/mcast.h:
	* src/udp.c:
	  Move GUdpSocket structure back into gnet-private.h and make
	  GMcastSocket derive from it explicitly and properly. More and
	  better guards for input to public gnet_mcast_*() functions.

2006-09-12  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.h:
	* src/unix.c:
	  Move another private structure that is only used locally
	  to where it belongs.

2006-09-11  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Require at least GLib-2.6. Give more extensive error message if
	  GLib development files are not found.

	* src/gnet-private.h:
	* src/udp.c: (gnet_udp_socket_new_full), (gnet_udp_socket_delete),
	(gnet_udp_socket_ref), (gnet_udp_socket_unref),