@@ -258,119 +258,6 @@ struct _GInetAddr
   struct sockaddr_storage sa;
 };
 
-
-/* **************************************** */
-/* Async functions			*/
-
-gboolean gnet_inetaddr_new_list_async_cb (GIOChannel* iochannel, 
-					  GIOCondition condition, 
-					  gpointer data);
-
-
-typedef struct _GInetAddrNewListState 
-{
-  GList*	ias;
-  gint		port;
-  GInetAddrNewListAsyncFunc func;
-  gpointer 	data;
-
-  gboolean 	in_callback;
-#ifdef G_THREADS_ENABLED
-  GStaticMutex	mutex;
-  gboolean	is_cancelled;
-  gboolean	lookup_failed;
-  guint 	source;
-
-#else			       	/* UNIX process	*/
-  int 		fd;
-  pid_t 	pid;
-  GIOChannel* 	iochannel;
-  guint 	watch;
-  int 		len;
-  guchar 	buffer[256];
-
-#endif
-
-} GInetAddrNewListState;
-
-
-
-typedef struct _GInetAddrNewState 
-{
-  GInetAddrNewListAsyncID	list_id;
-  GInetAddrNewAsyncFunc 	func;
-  gpointer 			data;
-  gboolean			in_callback;
-#ifdef G_THREADS_ENABLED
-  GStaticMutex                  mutex;
-#endif
-} GInetAddrNewState;
-
-
-gboolean gnet_inetaddr_get_name_async_cb (GIOChannel* iochannel, 
-					  GIOCondition condition, 
-					  gpointer data);
-
-typedef struct _GInetAddrReverseAsyncState 
-{
-  GInetAddr* ia;
-  GInetAddrGetNameAsyncFunc func;
-  gpointer data;
-  gboolean in_callback;
-#ifdef G_THREADS_ENABLED
-  GStaticMutex mutex;
-  gboolean	is_cancelled;
-  gchar*	name;
-  guint 	source;
-#else				/* UNIX process	*/
-  int 		fd;
-  pid_t 	pid;
-  guint 	watch;
-  GIOChannel* 	iochannel;
-#endif
-  guchar	buffer[256 + 1];/* Names can only be 256 characters? */
-  int 		len;
-
-} GInetAddrReverseAsyncState;
-
-
-gboolean gnet_tcp_socket_new_async_cb (GIOChannel* iochannel, 
-				       GIOCondition condition, 
-				       gpointer data);
-
-typedef struct _GTcpSocketAsyncState 
-{
-  GTcpSocket* 		 socket;
-  GTcpSocketNewAsyncFunc func;
-  gpointer 		 data;
-  gint 			 flags;
-  GIOChannel* 		 iochannel;
-  guint 		 connect_watch;
-#ifdef GNET_WIN32
-  gint 			 errorcode;
-#endif
-} GTcpSocketAsyncState;
-
-void gnet_tcp_socket_connect_inetaddr_cb (GList* ia_list, gpointer data);
-
-void gnet_tcp_socket_connect_tcp_cb(GTcpSocket* socket, gpointer data);
-
-typedef struct _GTcpSocketConnectState 
-{
-  GList* ia_list;
-  GList* ia_next;
-
-  GInetAddrNewListAsyncID  inetaddr_id;
-  GTcpSocketNewAsyncID     tcp_id;
-
-  gboolean in_callback;
-
-  GTcpSocketConnectAsyncFunc func;
-  gpointer data;
-
-} GTcpSocketConnectState;
-
-
 /* **************************************** 	*/
 /* More Windows specific stuff 			*/
 
